--- a/G-Engine/G-Enginenut/imgui.ini
+++ b/G-Engine/G-Enginenut/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Renderer]
-Pos=564,921
-Size=394,99
-Collapsed=0
+Pos=311,1073
+Size=413,185
+Collapsed=1
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -15,12 +15,10 @@ Collapsed=0
 
 [Window][Viewport]
 Pos=0,19
-Size=2560,654
+Size=2560,1315
 Collapsed=0
-DockId=0x00000001,0
+DockId=0xFA06BC56,0
 
 [Docking][Data]
-DockSpace   ID=0xFA06BC56 Window=0x4647B76E Pos=0,53 Size=2560,1315 Split=Y
-  DockNode  ID=0x00000001 Parent=0xFA06BC56 SizeRef=2560,654 Selected=0x995B0CF8
-  DockNode  ID=0x00000002 Parent=0xFA06BC56 SizeRef=2560,659 CentralNode=1
+DockSpace ID=0xFA06BC56 Window=0x4647B76E Pos=0,53 Size=2560,1315 CentralNode=1 Selected=0x995B0CF8
 
